[gd_scene load_steps=6 format=3 uid="uid://b08lx1offh8ek"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_e1786"]
[ext_resource type="Texture2D" uid="uid://c0hmgb1rb7fuw" path="res://assets/enemies/Enemigo 1 A.png" id="2_14ffa"]
[ext_resource type="PackedScene" uid="uid://lfqx1j7lpv8r" path="res://scenes/hp_system.tscn" id="3_libdg"]
[ext_resource type="PackedScene" uid="uid://ra04r8rkne2q" path="res://scenes/hp_bar.tscn" id="4_wxpug"]

[sub_resource type="CircleShape2D" id="CircleShape2D_er8se"]
radius = 92.9139

[node name="Enemy 1A" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_e1786")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_14ffa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_er8se")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_er8se")

[node name="HP_System" parent="." instance=ExtResource("3_libdg")]

[node name="HP_Bar" parent="." instance=ExtResource("4_wxpug")]
offset_left = -75.0
offset_top = -150.0
offset_right = 75.0
offset_bottom = -125.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
